# q_code

non_HLOS/adsp_proc/bt/tools/: bt_nanopb_dependency.py
non_HLOS/adsp_proc/config/cust/: customer.h
non_HLOS/adsp_proc/eai/QNN/: QnnCommon.h  QnnOpDef.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
non_HLOS/adsp_proc/qsh_api/pb/: sns_accel.proto  sns_accel_cal.proto  sns_activity_recognition.proto  sns_ambient_light.proto  sns_ambient_temperature.proto  sns_amd.proto  sns_cal.proto  sns_ccd_walk.proto  sns_client.proto  sns_client_batch.proto  sns_client_glink.proto  sns_client_qsocket.proto  sns_client_sensor.proto  sns_color.proto  sns_delta_angle.proto  sns_device_context.proto  sns_device_mode.proto  sns_device_orient.proto  sns_direct_channel.proto  sns_distance_bound.proto  sns_dpc.proto  sns_elevator_detection.proto  sns_flight_mode.proto  sns_fmv.proto  sns_freefall_detect.proto  sns_game_rv.proto  sns_geomag_rv.proto  sns_gravity.proto  sns_gyro.proto  sns_gyro_cal.proto  sns_gyro_rot_matrix.proto  sns_hall.proto  sns_heart_rate.proto  sns_hinge_angle.proto  sns_human_presence_detect.proto  sns_humidity.proto  sns_inbag_detect.proto  sns_llmd.proto  sns_mag.proto  sns_mag_cal.proto  (+34 more)
non_HLOS/adsp_proc/qsh_platform/inc/: sns_data_stream.h  sns_gpio_types.h  sns_rc.h  sns_register.h  sns_request.h  sns_sensor.h  sns_sensor_event.h  sns_sensor_instance.h  sns_sensor_uid.h  sns_service.h  sns_sfe_vdm_types.h  sns_time.h
non_HLOS/adsp_proc/ssc_drivers/: himax_dsp_20260424.7z
non_HLOS/adsp_proc/ssc_drivers/himax_dsp/: himaxDSP_10ms_polling.7z  himaxDSP_11byte_17byte_polling_0429.7z  himaxDSP_interrupt.7z
non_HLOS/common/config/emmc/: partition_ext.xml
non_HLOS/wm_proc/productsw/btsw/bt/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/bt_test/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/bt_test/src/: bt_test.c
non_HLOS/wm_proc/productsw/btsw/bt/bt_utils/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/bt_utils/inc/: bt_utilities.h  lpai_bt_heap.h  lpai_bt_npa.h  qapi_bt_utilities.h
non_HLOS/wm_proc/productsw/btsw/bt/bt_utils/src/: bt_utilities.c  lpai_bt_heap.c  lpai_bt_npa.c
non_HLOS/wm_proc/productsw/btsw/bt/gatt/: CMakeLists.txt  gatt_interface.h  gatt_managers.h  status.h  types.h  version.h
non_HLOS/wm_proc/productsw/btsw/bt/gatt/app_delegates/: gatt_app_client_delegate.h  gatt_app_delegate.h  gatt_app_server_delegate.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/gatt/inc/: lpai_bt_gatt_managers.h  lpai_bt_gatt_msgs.h  lpai_bt_gatt_proto.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/gatt/src/: lpai_bt_gatt_managers.cpp  lpai_bt_gatt_proto.c
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/inc/: lpai_bt_app_mgr.h  lpai_bt_app_mgr_adsp_handler.h  lpai_bt_app_mgr_client_interface.h  lpai_bt_app_mgr_ctxhub_handler.h  lpai_bt_app_mgr_rpc.h  lpai_bt_hal_mgr.h  lpai_bt_state_mgr.h  qapi_ancs_profile.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/pb/: contexthub_hal.proto
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_app_mgr/src/: ancs_micro_app.cpp  app_mgr_rpc.c  gatt_client_test_app.cpp  lpai_bt_ancs_profile.cpp  lpai_bt_app_mgr.c  lpai_bt_app_mgr_client_interface.c  lpai_bt_app_mgr_ctxhub_handler.c  lpai_bt_hal_mgr.c  lpai_bt_state_mgr.c
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/audio_tone/inc/: lpai_bt_audio_tone.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/audio_tone/src/: lpai_bt_audio_tone.c
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/gatt/inc/: lpai_bt_gatt_client_app.h  lpai_bt_gatt_common.h  lpai_bt_gatt_server_app.h  qapi_bt_gatt.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/gatt/pb/: lpai_bt_gatt.proto
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/gatt/src/: lpai_bt_gatt_client_app.c  lpai_bt_gatt_common.c  lpai_bt_gatt_server_app.c
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/inc/: lpai_bt_le_adv.h  lpai_bt_le_scan.h  lpai_bt_lecoc_app.h  lpai_bt_rfcomm_app.h  qapi_bt_le_adv.h  qapi_bt_le_scan.h  qapi_bt_lecoc_app.h  qapi_bt_rfcomm_app.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_bt_microapps/src/: lpai_bt_le_adv.c  lpai_bt_le_scan.c  lpai_bt_lecoc_app.c  lpai_bt_rfcomm_app.c
non_HLOS/wm_proc/productsw/btsw/bt/lpai_transport/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/lpai_transport/inc/: lpai_transport.h  lpai_transport_internal.h
non_HLOS/wm_proc/productsw/btsw/bt/lpai_transport/src/: lpai_transport.c
non_HLOS/wm_proc/productsw/btsw/bt/nanopb/: CMakeLists.txt
non_HLOS/wm_proc/productsw/btsw/bt/nanopb/inc/: pb.h
non_HLOS/wm_proc/productsw/btsw/bt/nanopb/src/: pb_decode.c  pb_encode.c
non_HLOS/wm_proc/productsw/common/: CMakeLists.txt  pdtsw_glink.h  pdtsw_heap.h  pdtsw_platform.h  pdtsw_sm.h  pdtsw_util.h  pdtsw_worker_thread.h
non_HLOS/wm_proc/productsw/common/config/: Kconfig
non_HLOS/wm_proc/productsw/common/src/: pdtsw_glink.c  pdtsw_glink_stub.c  pdtsw_heap.c  pdtsw_platform.c  pdtsw_sm.c  pdtsw_sys_init.c  pdtsw_util.c  pdtsw_worker_thread.c
non_HLOS/wm_proc/productsw/config/: CMakeLists.txt  Kconfig  config.yml  prezephyr.cmake  prezephyr_aspen_lpai_awm_lw_prod.cmake  (+9 more)
non_HLOS/wm_proc/productsw/qsh_glink_router/: CMakeLists.txt
non_HLOS/wm_proc/productsw/qsh_glink_router/config/: Kconfig
non_HLOS/wm_proc/productsw/qsh_glink_router/inc/: qsh_glink_priv.h
non_HLOS/wm_proc/productsw/qsh_glink_router/src/: qsh_glink_router.c
non_HLOS/wm_proc/productsw/utility_glink/: CMakeLists.txt
non_HLOS/wm_proc/productsw/utility_glink/aspen_lpai_awm/inc/: pdtsw_utility_glink.h
non_HLOS/wm_proc/productsw/utility_glink/aspen_lpai_awm/src/: pdtsw_utility_glink.c
non_HLOS/wm_proc/productsw/utility_glink/aspen_lpai_swm/inc/: pdtsw_utility_glink.h
non_HLOS/wm_proc/productsw/utility_glink/aspen_lpai_swm/src/: pdtsw_utility_glink.c
non_HLOS/wm_proc/productsw/utility_glink/config/: Kconfig
non_HLOS/wm_proc/productsw/utility_glink/inc/: pdtsw_utility_glink_defs.h
(+1123 files in other folders)
