# ------------------------------------------------------------------------------
# Copyright (c) Qualcomm Technologies, Inc.
# All Rights Reserved.
# Confidential and Proprietary - Qualcomm Technologies, Inc.
# ------------------------------------------------------------------------------

add_subdirectory(lpai_bt_app_mgr)
add_subdirectory(lpai_bt_microapps)
add_subdirectory(lpai_transport)
add_subdirectory(bt_utils)
add_subdirectory(gatt)
add_subdirectory(bt_test)
#add_subdirectory(nanopb)
